--- a/biografia.html
+++ b/biografia.html
@@ -8,9 +8,8 @@
   discos discografia seru serugiran maquina de hacer pajaros maquinadehacerpajaros suigeneris sui generis leon gieco porSuiGieco Aznar Pedroaznar Mercedes Sosa
   mercedessosa Roberto Pettinato Robertopettinato Cerati gustavocerati Spinetta luisalbertospinetta">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/prueba.css">
-  <script src="js/bootstrap.js"></script>
   <title>Charly García- Biografía</title>
 </head>
 
@@ -30,51 +29,39 @@
   </header>
   <h1 class="titulo">Biografía</h1>
   <div class="introBio">
-    <br>
     <p>
       Carlos Alberto García, formó y encabezó dos de las bandas más populares en la historia del rock argentino: "Sui Géneris" en la década de 1970 y
       "Serú Girán" en la década de 1980;
       además de la banda de rock progresivo "La Máquina de Hacer Pájaros" y el grupo de folk rock "PorSuiGieco",
       ambas también en la década de 1970.​Desde la década de 1980, García ha trabajado principalmente como músico solista; siendo sus
-      instrumentos principales el piano, la guitarra y el teclado.
-    </p>
-
-    <p>
-      Ha ganado varios premios a lo largo de su trayectoria, entre los que se encuentran: un Grammy Latino a la Excelencia Musical;
+      instrumentos principales el piano, la guitarra y el teclado.</p>
+    <p>Ha ganado varios premios a lo largo de su trayectoria, entre los que se encuentran: un Grammy Latino a la Excelencia Musical;
       el Premio a la Trayectoria de los Premios Clarín Espectáculos; y el Premio Konex en varias oportunidades.
       Además, fue en 2010 declarado Ciudadano Ilustre de la Ciudad Autónoma de Buenos Aires por la Legislatura Porteña y
       en 2013 recibió el título de Doctor Honoris Causa de la Universidad Nacional de General San Martín.
-      En los Premios Gardel 2018 se impuso en seis de las siete categorías en las que estaba nominado, incluida Álbum del Año por su álbum «Random»
-    </p>
+      En los Premios Gardel 2018 se impuso en seis de las siete categorías en las que estaba nominado, incluida Álbum del Año por su álbum «Random»</p>
   </div>
-  <img src="multimedia/charlybio.jpg" alt="charly garcía con lentes de sol" class="fotoBio">
   <div class="infancia">
-    <br>
-    <h2>infancia</h2>
-    <br>
-    <p>
-      Es el primogénito de una familia porteña de buena posición económica.Tiene tres hermanos: Enrique (ya fallecido), Daniel y Josi.
+    <h2 class="bio__titulo">infancia</h2>
+    <p>Es el primogénito de una familia porteña de buena posición económica.Tiene tres hermanos: Enrique (ya fallecido), Daniel y Josi.
       Hijo de Carmen Moreno y Carlos Jaime García-Lange.
       Aunque su madre Carmen se dedicaba al cuidado y educación de sus hijos quiso que cada uno tuviera una niñera profesional,
       y para mayor orden y control, dispuso que cada uno durmiera en una habitación separada.
       La música comenzó desde muy temprano en su vida: a los dos años primero aprendió a tocar una citarina de oído,
       y luego siguió con un pequeño piano de juguete que le regaló su abuela materna. Cuando regresó del largo viaje a Europa,
-      su madre se dio cuenta que había aprendido a tocar de oído «Torna a Sorrento», una melodía que venía en una caja musical
-    </p>
-
-    <p>
-      A los cinco años, lo llevaron a tomar clases de piano con Julieta Sandoval, del conservatorio Thibaud Piazzini.
+      su madre se dio cuenta que había aprendido a tocar de oído «Torna a Sorrento», una melodía que venía en una caja musical.</p>
+    <p>A los cinco años, lo llevaron a tomar clases de piano con Julieta Sandoval, del conservatorio Thibaud Piazzini.
       En una de las primeras evaluaciones anuales del conservatorio al que fue llevado en 1956 (a los cinco años de edad)
       se destacó entre los demás niños por poder tocar con ambas manos.
       A los ocho años era capaz de reproducir una melodía que le cantaran,
       como las zarzuelas españolas que le cantaba María, una de las mucamas.
-      A los nueve años mientras miraba El Club del Clan por televisión compuso su primer tema llamado "Corazón de hormigón"
-    </p>
+      A los nueve años mientras miraba El Club del Clan por televisión compuso su primer tema llamado "Corazón de hormigón"</p>
   </div>
-  <br>
+  <div class="infancia__foto">
+    <img src="multimedia/charlyniño.jpg" alt="Charly García de niño">
+  </div>
   <div class="bioSuiGeneris">
-    <h2>Sui Generis (1969-1975)</h2>
-    <br>
+    <h2 class="bio__titulo">Sui Generis (1969-1975)</h2>
     <p>Charly García asistió al Instituto Social Militar Dr. Dámaso Centeno. Allí formó su banda To Walk Spanish junto a Juan Carlos Bellia
       en la que hacían versiones de Jimi Hendrix, The Byrds, Rolling Stones, etc. <br>
       Luego, en la secundaria, conoció a Nito Mestre que también tenía una banda junto a Carlos Piégari llamada The Century Indignation
@@ -99,11 +86,13 @@
       A los carteles que publicitaran el megarrecital por toda la ciudad se sumaron los grafiti de los fanáticos de la banda.
       Adiós Sui Géneris fue un espectáculo que reunió a más de veinticinco mil personas y plantó un precedente histórico en el rock nacional.
       A la salida, García se fue a cenar con María Rosa a un restaurante de la avenida Corrientes.
-      Allí estaba León Gieco con su mujer, que habían presenciado la presentación. La decisión estaba tomada.
-    </p>
+      Allí estaba León Gieco con su mujer, que habían presenciado la presentación. La decisión estaba tomada.</p>
+  </div>
+  <div class="bioSuiGeneris__foto">
+    <img src="multimedia/Sui_Generis.jpg" alt="Foto del grupo Sui Generis">
   </div>
   <div class="bioPorSuiGieco">
-    <h2>PorSuiGieco</h2>
+    <h2 class="bio__titulo">PorSuiGieco</h2>
     <p>En 1974, los líderes del rock acústico se reúnen para salir de gira. Sin un proyecto formal más que «compartir buenos momentos, divertirnos tocando y
       cantando», Charly García, Raúl Porchetto, Nito Mestre, León Gieco y María Rosa Yorio (por entonces la mujer de Charly) forman PorSuiGieco
       y su Banda de Avestruces Domadas que, recién en 1976 y tras varias postergaciones y problemas, grabaron un disco con el nombre del grupo (PorSuiGieco).<br>
@@ -112,8 +101,11 @@
       Años más tarde, en 2002, una reedición del disco en formato CD, pondría las cosas en su lugar.
       El folk acústico de la propuesta original derivó en un estilo más eléctrico y elaborado, aunque sin perder la frescura que caracterizó a la agrupación.</p>
   </div>
+  <div class="bioPorSuiGieco__foto">
+    <img src="multimedia/porsuigieco.jpg" alt="Foto de la banda PorSuiGieco">
+  </div>
   <div class="bioMaquina">
-    <h2>La Máquina de Hacer Pájaros</h2>
+    <h2 class="bio__titulo">La Máquina de Hacer Pájaros</h2>
     <p>Sui Géneris estaba agotado. Charly comenzó a incursionar por otros caminos de la música.
       A la vez, empezó a ir al psicoanalista porque se seguía sintiendo muy angustiado.
       Se pasaba todo el día encerrado en su departamento, tocando y componiendo, prácticamente sin hablar con nadie.
@@ -145,7 +137,11 @@
       Zoca sería su mujer hasta fines de los años ochenta y la inspiradora de varias de sus canciones,
       como «Zocacola» y «Ella adivinó».</p>
   </div>
+  <div class="bioMaquina__foto">
+    <img src="multimedia/maquinadehacerpajaros.jpg" alt="Foto de la banda La maquina de hacer pajaros">
+  </div>
   <div class="bioSeru">
+    <h2 class="bio__titulo">Serú Giran</h2>
     <p>Tras las peleas en La Máquina, Charly García tomó la determinación de dejar la banda en 1977
       y viajar a Brasil con David Lebón, su amigo desde la época de Sui Géneris.
       Con el dinero recaudado en el Festival del Amor (Luna Park, 11 de noviembre de 1977)
@@ -166,8 +162,7 @@
       No satisfecho con esto, Bond tomó algunas pistas grabadas por la banda y descartadas para Serú Girán, agregó encima su voz
       y las usó para Billy Bond and the Jets, un disco editado en 1979 que pasó desapercibido en aquella época. <br>
       Luego dicha formación se desarma y queda conformada Serú Girán,
-      con melodías virtuosas y letras que entre la ironía y la angustia retrataron la situación bajo la dictadura argentina.
-    </p>
+      con melodías virtuosas y letras que entre la ironía y la angustia retrataron la situación bajo la dictadura argentina.</p>
     <p>Aunque la banda regresó a Buenos Aires con grandes expectativas para el nuevo proyecto de Charly García, los comienzos fueron difíciles,
       era 1978 y el primer disco no convencía a un público escéptico, el primer concierto de la banda fue mal recibido, ya que el público
       se esperaba una nueva encarnación de Sui Generis, al día siguiente, el OP especializado de prensa denomina a Serú Girán como
@@ -186,9 +181,34 @@
       el quinto disco de la banda No llores por mí, Argentina. Ese año, García inició su carrera solista. <br>
       En 2019, en un vídeo filmado junto con Pedro Aznar y David Lebon, los miembros vivos de Serú, anunciaron la remasterización del disco La Grasa de las Capitales.</p>
   </div>
-  <!--- Falta mas bio----------------->
-  <hr class="corte">
-  <footer class="foot">
+  <div class="bioSeru__foto">
+    <img src="multimedia/serugiran.jpg" alt="Foto de la banda Serú Giran">
+  </div>
+  <div class="bioSolista">
+    <h2>Carrera como solista</h2>
+    <p>En 1982, la Argentina estaba en proceso de cambio político. Después de la Guerra de las Malvinas en junio, estalló el caos social y el gobierno militar perdió parte de su poder. Ese año García debutó como solista, hizo la banda sonora de Pubis
+      angelical, película de Raúl de la Torre, adaptada de la novela de Manuel Puig, también guionista. El material salió ese año editado en un álbum doble junto a Yendo de la cama al living. Ayudado por la difusión que se le daba en ese momento al
+      rock nacional a través de los medios de comunicación (durante la Guerra de Malvinas estaba prohibido pasar música en inglés), el disco tuvo una gran recepción en el público. En él venían canciones antológicas, como por ejemplo «No bombardeen
+      Buenos Aires» (que reflejaba el momento de la guerra de Malvinas), «Inconsciente colectivo», «Yo no quiero volverme tan loco» o «Yendo de la cama al living». Para este trabajo, la banda estaba formada por Willy Iturri en batería, Gustavo
+      Bazterrica en guitarra, Cachorro López en bajo y Andrés Calamaro en teclados (estos tres últimos integrantes de Los Abuelos de la Nada). Este material fue presentado en un imponente recital (ante 25.000 personas) en el estadio de Ferrocarril
+      Oeste, el 26 de diciembre de 1982. En esos meses, además de grabar su primer disco solista, Charly produjo artísticamente a Los Abuelos de la Nada, que «telonearon» el recital de Ferro junto con el incipiente Suéter, este último muy mal
+      recibido, con insultos y objetos arrojados al escenario.
+    </p>
+    <br>
+    <p>En 1983, Charly García dejó Buenos Aires con una maleta pequeña. Al regresar a Buenos Aires desde Nueva York, trajo una nueva calidad. Ese año apareció Clics modernos, grabado y mezclado en Nueva York. Este nuevo trabajo presenta un giro en la
+      música de García, con la introducción de ritmos bailables, canciones más cortas y por momentos más irreverentes, acordes a los aires de renovación que empezaron a llegar con la apertura democrática. Canciones como «Los dinosaurios», «Nos siguen
+      pegando abajo (pecado mortal)» y «No me dejan salir» se convirtieron en éxitos en la carrera de Charly. Este material fue presentado los días 15, 16, 17 y 18 de diciembre en el estadio Luna Park, acompañado por Pablo Guyot (guitarra), Alfredo
+      Toth (bajo), Willy Iturri (batería), Daniel Melingo (saxo), Fabiana Cantilo (coros) y un joven rosarino en los teclados: Fito Páez. Este disco no fue bien entendido por el público, pues incluía (por primera vez en Argentina) temas «bailables»,
+      es decir: el ritmo tomaba otra dimensión, recortando las letras, hasta entonces concepto primordial del rock nacional. Tuvo un reconocimiento más tardío.
+    </p><br>
+    <p>El 10 de diciembre, el curso de la historia argentina dio un giro cuando el gobierno pudo ser elegido democráticamente por el pueblo. En 1984, Charly García realizó muchos espectáculos bien recibidos, y grabó otro álbum durante los últimos
+      meses. La trilogía esencial de García se completa con Piano bar, un álbum roquero que tiene en «Demoliendo hoteles» y en «Cerca de la revolución» sus máximos logros. También lanzó Terapia intensiva, un maxi-simple compuesto, producido y
+      arreglado por García para la obra de teatro homónima de Antonio Gasalla.</p>
+  </div>
+  <div class="bioSolista__foto">
+    <img src="multimedia/charlybigote.jpg" alt="">
+  </div>
+  <footer class="pie">
     <a href="#top">Volver arriba.</a>
   </footer>
 </body>
