--- a/discografia.html
+++ b/discografia.html
@@ -8,9 +8,8 @@
   <meta name="keywords" content="canción canciones música rock charly garcía Carlos Garcia músico artista bohemio pianista piano música_argentina rock_argentino rock_progresivo progresivo
   discos discografia seru serugiran maquina de hacer pajaros maquinadehacerpajaros suigeneris sui generis leon gieco porSuiGieco Aznar Pedroaznar Mercedes Sosa
   mercedessosa Roberto Pettinato Robertopettinato Cerati gustavocerati Spinetta luisalbertospinetta">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/prueba.css">
-  <script src="js/bootstrap.js"></script>
   <title>Charly García- Discografía</title>
 </head>
 
