--- a/galeria.html
+++ b/galeria.html
@@ -7,17 +7,9 @@
     <meta name="keywords" content="fotos fotografía imágenes garcyayotros foto canción canciones música rock charly garcía Carlos Garcia músico artista bohemio pianista piano música_argentina rock_argentino rock_progresivo progresivo
     discos discografia seru serugiran maquina de hacer pajaros maquinadehacerpajaros suigeneris sui generis leon gieco porSuiGieco Aznar Pedroaznar Mercedes Sosa
     mercedessosa Roberto Pettinato Robertopettinato Cerati gustavocerati Spinetta luisalbertospinetta">
-    <!--Bootstrap----------------------------->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <!--- Css propio---------------------------------->
     <link rel="stylesheet" href="css/prueba.css">
-    <!---Jquery----------------------------->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <!---Popper.Js-------------------->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <!---Bs.js----------------------------->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<title></title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <title>Charly García- Galería</title>
   </head>
   <body>
     <header class="header">
@@ -35,7 +27,70 @@
     </header>
     <h1 class="titulo">Galería</h1>
 
-  <div class="galeria__carousel">
+    <div class="galeria">
+      <h5 class="galeria__titulo">Charly en la actualidad</h5>
+      <div class="galeria__fila1">
+        <div class="galeria__fila1__imagen1">
+          <img src="multimedia/charlypiano.jpg" alt="Charly García sentado frente al piano">
+        </div>
+        <div class="galeria__fila1__imagen2">
+          <img src="multimedia/charlypileta.jpg" alt="Charly García en la pileta">
+        </div>
+        <div class="galeria__fila1__imagen3">
+          <img src="multimedia/charlygranrex.jpg" alt="Charly García recital Gran Rex 2018">
+        </div>
+        <div class="galeria__fila1__imagen4">
+          <img src="multimedia/charlysolista.jpg" alt="Charly García recital Plaza de la Música">
+        </div>
+        <div class="galeria__fila1__imagen5">
+          <img src="multimedia/charlylengua.jpg" alt="Charly García sacando la lengua">
+        </div>
+      </div>
+      <h5 class="galeria__titulo">Juventud</h5>
+      <div class="galeria__fila2">
+        <div class="galeria__fila2__imagen1">
+          <img src="multimedia/charlylentes.jpg" alt="Charly García con lentes de sol">
+        </div>
+        <div class="galeria__fila2__imagen2">
+          <img src="multimedia/charlybigote.jpg" alt="Charly García y su famoso bigote bi-color">
+        </div>
+        <div class="galeria__fila2__imagen3">
+          <img src="multimedia/charlyguitarra.jpg" alt="Charly García en una sesión de fotos en Bs.As.">
+        </div>
+        <div class="galeria__fila2__imagen4">
+          <img src="multimedia/charlylunapark76.png" alt="Charly García en el Luna Park (año 1976)">
+        </div>
+        <div class="galeria__fila2__imagen5">
+          <img src="multimedia/charlytelefono.jpg" alt="Charly García en una sesión de fotos para la revista Gente">
+        </div>
+      </div>
+      <h5 class="galeria__titulo">Junto a otros artistas reconocidos</h5>
+      <div class="galeria__fila3">
+        <div class="galeria__fila3__imagen1">
+          <img src="multimedia/mercedesycharly.jpg" alt="Charly García y Mercedes Sosa">
+        </div>
+        <div class="galeria__fila3__imagen2">
+          <img src="multimedia/serugiran.jpg" alt="fotografía de la banda Serú Giran">
+        </div>
+        <div class="galeria__fila3__imagen3">
+          <img src="multimedia/pasandroycharly.jpg" alt="Charly García, Pedro Aznar y Sandro">
+        </div>
+        <div class="galeria__fila3__imagen4">
+          <img src="multimedia/spinettaycharly.jpg" alt="Charly García junto a Alberto Spinetta">
+        </div>
+        <div class="galeria__fila3__imagen5">
+          <img src="multimedia/fitoycharly.jpg" alt="Charly García junto a Fito Paez">
+        </div>
+        <div class="galeria__fila3__imagen6">
+          <img src="multimedia/pedroycharly.jpg" alt="Charly García y Pedro Aznar">
+        </div>
+        <div class="galeria__fila3__imagen7">
+          <img src="multimedia/nitoycharly.jpg" alt="Charly García y Nito Mestre">
+        </div>
+      </div>
+    </div>
+
+<!--   <div class="galeria__carousel">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -109,9 +164,8 @@
           </div>
         </div>
 
-    </div>
-    <hr class="corte">
-    <footer class="foot">
+    </div> -->
+    <footer class="pie">
       <a href="#top">Volver arriba.</a>
     </footer>
   </body>
