--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,20 +7,12 @@
   <meta name="keywords" content="canción canciones música rock charly garcía Carlos Garcia músico artista bohemio pianista piano música_argentina rock_argentino rock_progresivo progresivo
   discos discografia seru serugiran maquina de hacer pajaros maquinadehacerpajaros suigeneris sui generis leon gieco porSuiGieco Aznar Pedroaznar Mercedes Sosa
   mercedessosa Roberto Pettinato Robertopettinato Cerati gustavocerati Spinetta luisalbertospinetta">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/prueba.css">
-  <!---Jquery----------------------------->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <!---Popper.Js-------------------->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <!---Bs.js----------------------------->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <title>Charly García- Inicio</title>
-
 </head>
-
 <body>
-  <header class="header top">
+  <header class="header">
     <a href="index.html" class="logo">Charly García</a>
     <input class="menu-btn" type="checkbox" id="menu-btn">
     <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span> </label>
@@ -34,21 +25,20 @@
       <li><a href="contacto.html">Contacto</a></li>
     </ul>
   </header>
+  <main>
   <h1 class="titulo">Charly García</h1>
-
-
   <div class="divFoto">
-    <img src="multimedia/Charly_García_por_Alejandro_Kuropatwa.jpg" alt="Foto de Charly Garcia por Alejandro Kuropatwa en 1989" class="fotoIndex">
+    <img class="fotoIndex" src="multimedia/Charly_García_por_Alejandro_Kuropatwa.jpg" alt="Foto de Charly Garcia por Alejandro Kuropatwa en 1989" >
   </div>
 
   <div class="informacion">
-    <div class="informacion_item"><h2>Sobre Charly</h2>
+    <div class="informacion__item"><h2>Sobre Charly</h2>
     <p>Carlos Alberto García Moreno es un cantautor, músico y productor argentino de rock.</p></div>
-    <div class="informacion_item"><h2>Distinciones</h2>
+    <div class="informacion__item"><h2>Distinciones</h2>
     <p>Doctor honoris causa de la Universidad Nacional de Rosario, Premio a la Trayectoria de los Premios Clarín Espectáculos, <br>
       Premio Grammy Latino a la Excelencia Musical. En los Premios Gardel 2018 se impuso en seis de las siete categorías a las que fue nominado.</p>
   </div>
-    <div class="informacion_item"><h2>Géneros Musicales</h2>
+    <div class="informacion__item"><h2>Géneros Musicales</h2>
     <p>Los géneros musicales en los cuales García se ha desempeñado han sido art rock, pop rock, post punk, synth pop, lo-fi, new wave,
       <br>
       funk rock, jazz rock, rock alternativo, piano rock, rock progresivo, rock experimental, rock sinfónico y tango rock.
@@ -59,8 +49,7 @@
   <div class="videoIndex">
     <iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/LGG9B-x6BhU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-  <br>
-  <hr class="corte">
+  </main>
     <footer>
       <div class="pie">
         <a href="#top">Volver arriba</a>
