--- a/novedades.html
+++ b/novedades.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,12 +7,10 @@
   <meta name="keywords" content="noticias novedades historias historia nuevo novedoso reciente último ultima canción canciones música rock charly garcía Carlos Garcia músico artista bohemio pianista piano música_argentina rock_argentino rock_progresivo progresivo
   discos discografia seru serugiran maquina de hacer pajaros maquinadehacerpajaros suigeneris sui generis leon gieco porSuiGieco Aznar Pedroaznar Mercedes Sosa
   mercedessosa Roberto Pettinato Robertopettinato Cerati gustavocerati Spinetta luisalbertospinetta">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/prueba.css">
-  <script src="js/bootstrap.js"></script>
   <title>Charly García- Novedades</title>
 </head>
-
 <body>
   <header class="header">
     <a href="index.html" class="logo">Charly García</a>
@@ -30,60 +27,39 @@
   </header>
   <h1 class="titulo">Novedades</h1>
   <div class="novedades">
-    <div class="novedades__noticia1 novedades--noticia">
-      <div class="novedades__noticia1__titulo novedades__noticia--titulo">
-    <h4 class="noticiaTitulo">Charly García regresó a su casa luego de cuatro días de internación</h4>
+    <div class="novedades__noticia1">
+      <h4 class="novedades__noticia__titulo">Charly García regresó a su casa luego de cuatro días de internación</h4>
+      <p><i>3 de junio de 2020.</i></p>
+      <p>Con un escueto comunicado, la familia de Charly García informó que el cantante fue dado de alta<br> este miércoles y que ya se encuentra en su casa.
+        <br>
+        El astro del rock local había sido internado en el Instituto Argentino del Diagnóstico (IADT) el
+        último sábado.</p>
+      <p>artículo completo <a href="https://www.lanacion.com.ar/espectaculos/personajes/charly-garcia-regreso-su-casa-luego-cuatro-nid2373246">aquí.</a></p>
     </div>
-    <br>
-    <div class="novedades__noticia1__info">
-    <p><i>3 de junio de 2020.</i></p>
-    <p>Con un escueto comunicado, la familia de Charly García informó que el cantante fue dado de alta<br> este miércoles y que ya se encuentra en su casa.
-      <br>
-      El astro del rock local había sido internado en el Instituto Argentino del Diagnóstico (IADT) el
-      último sábado.</p>
-    <p>artículo completo <a href="https://www.lanacion.com.ar/espectaculos/personajes/charly-garcia-regreso-su-casa-luego-cuatro-nid2373246">aquí.</a></p>
-      </div>
+    <div class="novedades__noticia2">
+      <h4 class="novedades__noticia__titulo">El comunicado de la familia de Charly García sobre su estado de salud</h4>
+      <p><i>31 de mayo de 2020.</i></p>
+      <p>La familia de Charly García emitió este domingo un comunicado luego de que se conociera la noticia de su internación el sábado,<br>
+        en el Instituto Argentino de Diagnóstico y Tratamiento.<br>
+        Tras aclarar que el primer hisopado por coronavirus dio negativo, su entorno hizo mención al actual estado de salud del músico.</p>
+      <p>artículo completo <a href="https://www.lanacion.com.ar/espectaculos/personajes/el-comunicado-familia-charly-garcia-su-estado-nid2371872">aquí.</a></p>
     </div>
-    <div class="novedades__noticia2 novedades--noticia">
-    <div class="novedades__noticia2__titulo novedades__noticia--titulo">
-    <h4 class="noticiaTitulo">El comunicado de la familia de Charly García sobre su estado de salud</h4>
-  </div>
-    <br>
-    <div class="novedades__noticia2__info">
-    <p><i>31 de mayo de 2020.</i></p>
-    <p>La familia de Charly García emitió este domingo un comunicado luego de que se conociera la noticia de su internación el sábado,<br>
-      en el Instituto Argentino de Diagnóstico y Tratamiento.<br>
-      Tras aclarar que el primer hisopado por coronavirus dio negativo, su entorno hizo mención al actual estado de salud del músico.</p>
-    <p>artículo completo <a href="https://www.lanacion.com.ar/espectaculos/personajes/el-comunicado-familia-charly-garcia-su-estado-nid2371872">aquí.</a></p>
+    <div class="novedades__noticia3">
+      <h4 class="novedades__noticia__titulo">Un Himno, una polémica.</h4>
+      <p><i>25 de mayo de 2020</i></p>
+      <p>En la medianoche de un 25 de mayo de hace 30 años atrás, el excéntrico Federico Peralta Ramos le dio accidentalmente a Charly García
+        la idea perfecta<br> para el cierre del disco en el que trabajaba, el ideal equilibrio entre la genialidad y la transgresión,
+        con su insistente convite para que interprete el Himno Nacional<br> Argentino en el piano de cola del salón.</p>
+      <p>la nota completa en este <a href="https://www.lanacion.com.ar/espectaculos/musica/como-se-gesto-version-del-himno-nacional-nid2369358">enlace.</a></p>
     </div>
-    </div>
-    <div class="novedades__noticia3 novedades--noticia">
-    <div class="novedades__noticia3__titulo novedades__noticia--titulo">
-    <h4 class="noticiaTitulo">Charly García, la historia de un genio tan frágil como inquebrantable</h4>
-    </div>
-    <br>
-    <div class="novedades__noticia3__info">
-    <p><i>30 de mayo de 2020.</i></p>
-    <p>Un repaso por la linea de tiempo del musico, desde su nacimiento hasta la actualidad en este
-      <a href="https://www.lanacion.com.ar/espectaculos/charly-garcia-una-vida-plagada-de-musica-y-excesos-nid1969176">enlace</a>.</p>
-      </div>
-    </div>
-    <div class="novedades__noticia4 novedades--noticia">
-    <div class="novedades__noticia4__titulo novedades__noticia--titulo">
-    <h4 class="noticiaTitulo">Un Himno, una polémica.</h4>
-    </div>
-    <br>
-    <div class="novedades__noticia4__info">
-    <p><i>25 de mayo de 2020</i></p>
-    <p>En la medianoche de un 25 de mayo de hace 30 años atrás, el excéntrico Federico Peralta Ramos le dio accidentalmente a Charly García
-      la idea perfecta<br> para el cierre del disco en el que trabajaba, el ideal equilibrio entre la genialidad y la transgresión,
-      con su insistente convite para que interprete el Himno Nacional<br> Argentino en el piano de cola del salón.</p>
-    <p>la nota completa en este <a href="https://www.lanacion.com.ar/espectaculos/musica/como-se-gesto-version-del-himno-nacional-nid2369358">enlace.</a></p>
+    <div class="novedades__noticia4">
+      <h4 class="novedades__noticia__titulo">Charly García, la historia de un genio tan frágil como inquebrantable</h4>
+      <p><i>30 de mayo de 2020.</i></p>
+      <p>Un repaso por la linea de tiempo del musico, desde su nacimiento hasta la actualidad en este
+        <a href="https://www.lanacion.com.ar/espectaculos/charly-garcia-una-vida-plagada-de-musica-y-excesos-nid1969176">enlace</a>.</p>
     </div>
   </div>
-  </div>
-  <hr class="corte">
-  <div class="foot">
+  <div class="pie">
     <footer>
       <a href="#top">Volver arriba.</a>
     </footer>
